--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "express": "^4.17.1",
+    "node-windows": "^1.0.0-beta.5",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   }
